--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.data.jpa.repositories.bootstrap-mode=default
 #logging.level.root=debug
+spring.jpa.show-sql=true
+hibernate.dialect=org.hibernate.dialect.H2Dialect
